fixed small bug & added overflow to drawer

--- a/src/Drawer/Drawer.css
+++ b/src/Drawer/Drawer.css
@@ -1,3 +1,8 @@
+/* general style */
+.drawer {
+  overflow: auto;
+}
+
 /* top - mode */
 .drawer-top-mode .drawer.close {
   height: 0% !important;
